{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 44,
  "lineage": "89b80bca-541f-1215-c7cb-e37b7abf4fa1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "routing_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0a0239b245e991bb2",
            "id": "rtb-0a0239b245e991bb2",
            "owner_id": "463137928195",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054b4880fd5988d63",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_table"
            },
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_internet_gateway.internet_getway",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bostion_host_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:463137928195:instance/i-036b6bc3956204277",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036b6bc3956204277",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EFS_task",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b50f502091d3c53",
            "private_dns": "ip-192-168-0-232.ap-south-1.compute.internal",
            "private_ip": "192.168.0.232",
            "public_dns": "ec2-13-233-87-29.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.87.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a9884702b99c65d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010abc70b7f936c68",
            "tags": {
              "Name": "Bositon_Host_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3d32f5671943ace"
            ]
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_subnet.public_subnet",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb6467b60a881234",
            "arn": "arn:aws:ec2:ap-south-1:463137928195:instance/i-0f2e7fdf23cc0c6b3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2e7fdf23cc0c6b3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EFS_task",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd31ea87adf0d31a",
            "private_dns": "ip-192-168-1-198.ap-south-1.compute.internal",
            "private_ip": "192.168.1.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a3e4137200ea039e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032d6129ec9f60b75",
            "tags": {
              "Name": "MySql_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040806da30aefb5be"
            ]
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_security_group.mysql_security_grp",
            "aws_security_group.wordpress_security_grp",
            "aws_subnet.private_subnet",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9c43b5bc2603d9d",
            "arn": "arn:aws:ec2:ap-south-1:463137928195:instance/i-0979e1b6ecbd1039c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0979e1b6ecbd1039c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EFS_task",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c33b59fdb2b2169",
            "private_dns": "ip-192-168-0-85.ap-south-1.compute.internal",
            "private_ip": "192.168.0.85",
            "public_dns": "ec2-13-235-8-250.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.8.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0668b72582394d788",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010abc70b7f936c68",
            "tags": {
              "Name": "WordPress_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013e82a8301a98247"
            ]
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_security_group.wordpress_security_grp",
            "aws_subnet.public_subnet",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_getway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:internet-gateway/igw-054b4880fd5988d63",
            "id": "igw-054b4880fd5988d63",
            "owner_id": "463137928195",
            "tags": {
              "Name": "Internet_Getway"
            },
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing_table_asson",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0466263bc1c4155e9",
            "route_table_id": "rtb-0a0239b245e991bb2",
            "subnet_id": "subnet-010abc70b7f936c68"
          },
          "dependencies": [
            "aws_default_route_table.routing_table",
            "aws_internet_gateway.internet_getway",
            "aws_subnet.public_subnet",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bostion_host_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:security-group/sg-0d3d32f5671943ace",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3d32f5671943ace",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For login to bostion host from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bostion_host_security_grp",
            "name_prefix": "",
            "owner_id": "463137928195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_Bostion_host"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:security-group/sg-040806da30aefb5be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040806da30aefb5be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Only bostion host can connect to MySql using ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3d32f5671943ace"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Only web ping sql from public subnet",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-013e82a8301a98247"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "WordPress can connect to MySql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013e82a8301a98247"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysqlsecuritygrp",
            "name_prefix": "",
            "owner_id": "463137928195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_MySql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_security_group.wordpress_security_grp",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:security-group/sg-013e82a8301a98247",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013e82a8301a98247",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For connecting to WordPress from outside world",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Only bostion host can connect to WordPress using ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3d32f5671943ace"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_security_grp",
            "name_prefix": "",
            "owner_id": "463137928195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_WordPress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:subnet/subnet-032d6129ec9f60b75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-032d6129ec9f60b75",
            "map_public_ip_on_launch": false,
            "owner_id": "463137928195",
            "tags": {
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:subnet/subnet-010abc70b7f936c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-010abc70b7f936c68",
            "map_public_ip_on_launch": true,
            "owner_id": "463137928195",
            "tags": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-0e917ddecbcba9223"
          },
          "dependencies": [
            "aws_vpc.shyamvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shyamvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:463137928195:vpc/vpc-0e917ddecbcba9223",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08f00a349e9946929",
            "default_route_table_id": "rtb-0a0239b245e991bb2",
            "default_security_group_id": "sg-0d97e677917f2fd80",
            "dhcp_options_id": "dopt-032dd768",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e917ddecbcba9223",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0239b245e991bb2",
            "owner_id": "463137928195",
            "tags": {
              "Name": "Vpc"
            }
          }
        }
      ]
    }
  ]
}